Added notebook to estimate missing synapses per layer

--- a/notebooks/MissingSynapses.ipynb
+++ b/notebooks/MissingSynapses.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estimation of missing lynapses per layer"
+    "# Estimation of missing synapses per layer"
    ]
   },
   {
