Added scaling factors to be used in bbp-workflow config

--- a/notebooks/MissingSynapses.ipynb
+++ b/notebooks/MissingSynapses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,18 +124,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##########################################\n",
+      "### TO BE ADDED TO BBP-WORKFLOW CONFIG ###\n",
+      "##########################################\n",
+      "\"depol_layer_scale\": {\"L1I\": 0.6, \"L23E\": 1.0, \"L23I\": 0.6, \"L4E\": 1.0, \"L4I\": 0.6, \"L5E\": 2.3, \"L5I\": 0.6, \"L6E\": 1.0, \"L6I\": 0.6}\n"
+     ]
+    }
+   ],
    "source": [
-    "syn_count_E_mean_all_wo_L4 = np.mean(np.array(syn_count_E_mean)[[1, 2, 3, 5]])\n",
+    "# Define groups of rel. scaling factors\n",
+    "syn_count_E_mean_all_wo_L5 = np.mean(np.array(syn_count_E_mean)[[1, 2, 3, 5]])\n",
     "syn_count_E_mean_L5 = np.mean(np.array(syn_count_E_mean)[4])\n",
-    "syn_count_I_mean_all = np.mean(syn_count_I_mean)"
+    "syn_count_I_mean_all = np.mean(syn_count_I_mean)\n",
+    "\n",
+    "rel_scale_E_wo_L5 = np.round(syn_count_E_mean_all_wo_L5 / syn_count_E_mean_all_wo_L5, 1)\n",
+    "rel_scale_E_L5 = np.round(syn_count_E_mean_L5 / syn_count_E_mean_all_wo_L5, 1)\n",
+    "rel_scale_I = np.round(syn_count_I_mean_all / syn_count_E_mean_all_wo_L5, 1)\n",
+    "\n",
+    "scale_dict = {                           'L1I': rel_scale_I,\n",
+    "              'L23E': rel_scale_E_wo_L5, 'L23I': rel_scale_I,\n",
+    "              'L4E': rel_scale_E_wo_L5,  'L4I': rel_scale_I, \n",
+    "              'L5E': rel_scale_E_L5,     'L5I': rel_scale_I,\n",
+    "              'L6E': rel_scale_E_wo_L5,  'L6I': rel_scale_I}\n",
+    "\n",
+    "print('##########################################')\n",
+    "print('### TO BE ADDED TO BBP-WORKFLOW CONFIG ###')\n",
+    "print('##########################################')\n",
+    "print('\"depol_layer_scale\": {}'.format(str(scale_dict).replace(\"'\", '\"')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +179,7 @@
     }
    ],
    "source": [
-    "# Plot missing synapses\n",
+    "# Visualization of missing synapses\n",
     "fig = plt.figure(figsize=(9, 3))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.barh(layers, syn_count_E_mean, color='r')\n",
@@ -161,7 +188,7 @@
     "plt.xlabel('#Missing EXC synapses')\n",
     "plt.ylabel('Layer')\n",
     "plt.ylim((min(layers) - 0.5, max(layers) + 0.5))\n",
-    "plt.plot([syn_count_E_mean_all_wo_L4] * 2, plt.ylim(), '--', color='grey')\n",
+    "plt.plot([syn_count_E_mean_all_wo_L5] * 2, plt.ylim(), '--', color='grey')\n",
     "plt.plot([syn_count_E_mean_L5] * 2, plt.ylim(), '--', color='grey')\n",
     "plt.gca().invert_yaxis()\n",
     "\n",
@@ -177,20 +204,6 @@
     "\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
