Changed scaling factor naming for bbp-workflow

--- a/notebooks/MissingSynapses.ipynb
+++ b/notebooks/MissingSynapses.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,9 @@
       "##########################################\n",
       "### TO BE ADDED TO BBP-WORKFLOW CONFIG ###\n",
       "##########################################\n",
-      "\"depol_layer_scale\": {\"L1I\": 0.6, \"L23E\": 1.0, \"L23I\": 0.6, \"L4E\": 1.0, \"L4I\": 0.6, \"L5E\": 2.3, \"L5I\": 0.6, \"L6E\": 1.0, \"L6I\": 0.6}\n"
+      "attrs: {...\n",
+      "        \"shotn_layer_scale\": {\"L1I\": 0.6, \"L23E\": 1.0, \"L23I\": 0.6, \"L4E\": 1.0, \"L4I\": 0.6, \"L5E\": 2.3, \"L5I\": 0.6, \"L6E\": 1.0, \"L6I\": 0.6}\n",
+      "        ...}\n"
      ]
     }
    ],
@@ -157,7 +159,9 @@
     "print('##########################################')\n",
     "print('### TO BE ADDED TO BBP-WORKFLOW CONFIG ###')\n",
     "print('##########################################')\n",
-    "print('\"depol_layer_scale\": {}'.format(str(scale_dict).replace(\"'\", '\"')))"
+    "print('attrs: {...')\n",
+    "print('        \"shotn_layer_scale\": {}'.format(str(scale_dict).replace(\"'\", '\"')))\n",
+    "print('        ...}')"
    ]
   },
   {
